# alps

./: CMakeLists.txt  std.alps  test.alps  test.cml
src/: Compiler.c  Compiler.h  InternalFuncs.c  InternalFuncs.h  Lexer.c  Lexer.h  Main.c  Parser.c  Parser.h
